--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@mui/icons-material": "^5.14.8",
     "@mui/material": "^5.14.8",
     "@mui/system": "^5.14.8",
-    "@types/node": "20.5.9",
+    "@prisma/client": "^5.2.0",
+    "@types/node": "^20.5.9",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
@@ -25,10 +26,13 @@
     "eslint-config-next": "13.4.19",
     "next": "13.4.19",
     "next-navigation": "^1.0.6",
+    "nodemon": "^3.0.1",
     "postcss": "8.4.29",
+    "prisma": "^5.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   }
 }
