--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "axios": "^1.5.0",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
-    "next": "13.4.19",
+    "next": "^13.5.2",
     "next-navigation": "^1.0.6",
     "nodemon": "^3.0.1",
     "postcss": "8.4.29",
