--- a/package.json
+++ b/package.json
@@ -32,13 +32,11 @@
     "next-navigation": "^1.0.6",
     "nodemon": "^3.0.1",
     "postcss": "8.4.29",
-    "prisma": "^5.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
     "tesseract.js": "^4.1.2",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2",
-    "uuid": "^9.0.1"
+    "typescript": "^5.2.2"
   }
 }
