--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "styled-jsx": "^5.1.2",
     "tailwindcss": "3.3.3",
     "tesseract.js": "^4.1.2",
     "ts-node": "^10.9.1",
