--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "@mui/system": "^5.14.8",
     "@netlify/plugin-nextjs": "^4.40.1",
     "@prisma/client": "^5.2.0",
+    "@stripe/react-stripe-js": "^2.3.1",
+    "@stripe/stripe-js": "^2.1.10",
     "@supabase/supabase-js": "^2.33.2",
     "@types/node": "^20.5.9",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
+    "dotenv": "^16.3.1",
     "encoding": "^0.1.13",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
