--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "jsonwebtoken": "^9.0.2",
     "next": "^13.4.19",
     "next-navigation": "^1.0.6",
+    "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1",
     "postcss": "8.4.29",
     "react": "18.2.0",
