--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
     "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1",
     "postcss": "8.4.29",
+    "razorpay": "^2.9.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "shortid": "^2.2.16",
     "styled-jsx": "^5.1.2",
     "tailwindcss": "3.3.3",
     "tesseract.js": "^4.1.2",
