--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "razorpay": "^2.9.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-toastify": "^10.0.3",
     "shortid": "^2.2.16",
     "styled-jsx": "^5.1.2",
     "tailwindcss": "3.3.3",
